system testing new book